--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,9 +9,7 @@
 }
 
 body, html {
-  /* background-color: rgba(255, 255, 255, 0.8); */
   background-image: linear-gradient(to right, rgba(38, 94, 157, 0.5), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.4));
-  /* background-image: linear-gradient(to right, rgba(180, 120, 179, 0.4), rgba(134, 183, 232, 0.4), rgba(248, 248, 243, 0.4)); */
   background-repeat: no-repeat;
   font-family: 'Quicksand', sans-serif;
   height: 100%;
@@ -26,7 +24,11 @@ p {
   text-align: center;
   font-weight: bold;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-  /* margin-left: 2px; */
+}
+
+canvas {
+  width: 650px; 
+  height: 450px
 }
 
 img {
@@ -35,8 +37,6 @@ img {
 }
 
 .top-section {
-  /* border: 2px solid green; */
-  /* border-bottom: 2px ridge rgba(64, 103, 147, 0.6); */
   height: 30%;
   display: flex;
   flex-direction: row;
@@ -45,7 +45,6 @@ img {
 }
 
 .welcome-box {
-  /* border: 1px solid blue; */
   width: 20%;
   height: 80%;
   margin: 5px;
@@ -55,20 +54,16 @@ img {
 }
 
 .welcome-user {
-  /* border: 1px solid yellow; */
   text-align: center;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
   font-size: 25px;
 }
 
 .user-image {
-  /* border: 1px solid yellow; */
-  /* width: auto; */
   height: 50%;
 }
 
 .activity-box {
-  /* border: 1px solid blue; */
   width: 40%;
   height: 80%;
   margin-bottom: 5px;
@@ -79,11 +74,8 @@ img {
 }
 
 .recent-activity-title {
-  /* border: 1px solid yellow; */
   text-align: center;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-
-  /* color:rgb(0, 0, 0, 0.8); */
   width: 90%;
   height: 10%;
   margin-bottom: 10px;
@@ -92,8 +84,6 @@ img {
 .recent-activity-container {
   border: 4px inset black;
   background-color: rgba(255, 255, 255, 0.7);
-  /* border: 2px inset rgba(101, 132, 164, 0.9); */
-  /* background-color: rgba(119, 85, 141, 0.25); */
   background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.6));
   width: 90%;
   height: 90%;
@@ -104,12 +94,9 @@ img {
   align-items: center;
 }
 
-
 .user-box {
   border: 4px inset black;
-  /* border: 2px inset rgba(64, 103, 147, 0.6); */
   background-color: rgba(97, 135, 183, 0.6);
-  /* background-image: linear-gradient(to left, rgba(38, 94, 157, 0.5), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.4)); */
   width: 40%;
   height: 80%;
   margin: 15px;
@@ -117,7 +104,6 @@ img {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  /* align-content: center; */
 }
 
 .user-dropdown {
@@ -142,8 +128,6 @@ img {
 }
 
 .bottom-section {
-  /* border: 2px solid green; */
-  /* border-top: 2px ridge rgba(64, 103, 147, 0.3); */
   height: 70%;
   display: flex;
   flex-direction: row;
@@ -152,7 +136,6 @@ img {
 }
 
 .icons-container {
-  /* border: 1px solid purple; */
   height: 90%;
   width: 10%;
   margin-right: 10px;
@@ -165,13 +148,11 @@ img {
 .activity-img,
 .water-img,
 .sleep-img {
-  /* width: auto; */
   height: 80px;
   padding: 5px;
 }
 
 .bottom-container {
-  /* border: 1px solid purple; */
   height: 90%;
   width: 85%;
   margin-left: 10px;
@@ -182,7 +163,6 @@ img {
 
 .category-container {
   border: 4px inset black;
-  /* border: 3px inset rgba(64, 103, 147, 0.3); */
   background-color: rgba(255, 255, 255, 0.7);
   background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.5));
   width: 98%;
@@ -194,14 +174,12 @@ img {
 }
 
 .title-container {
-  /* border: 1px solid blue; */
   margin: 4px;
   width: 95%;
   height: 10%;
 }
 
 .stats-container {
-  /* border: 1px solid blue; */
   width: 95%;
   height: 85%;
   margin-bottom: 25px;
@@ -212,7 +190,6 @@ img {
 }
 
 .img-box {
-  /* border: 1px solid yellow; */
   width: 18%;
   height: 100%;
   display: flex;
@@ -221,7 +198,6 @@ img {
 }
 
 .category-image {
-  /* width: auto; */
   height: 50%;
 }
 
@@ -234,15 +210,8 @@ img {
   justify-content: center;
   align-items: center;
 }
-/* .category-chart {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-} */
 
 .average-box {
-  /* border: 1px solid yellow; */
   width: 25%;
   height: 100%;
   display: flex;
@@ -259,11 +228,6 @@ img {
   height: 48%;
 }
 
-/* .icons {
-  font-size: 20px;
-  margin: 0;
-} */
-
 .steps-box,
 .minutes-active,
 .miles-walked,
@@ -272,7 +236,6 @@ img {
     background-color: rgba(171, 174, 203, 0.6);
     text-align: center;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
     padding-top: 5px;
     width: 23%;
