--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -251,6 +251,13 @@ img {
     height: 80%;
   }
 
+  .water-img:hover, 
+  .sleep-img:hover,
+  .activity-img:hover {
+    cursor: pointer;
+    filter: invert(100%);
+  }
+
   .hidden {
     display: none;
   }
