--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,7 @@ p {
 }
 
 canvas {
-  width: 650px; 
+  width: 650px;
   height: 450px
 }
 
@@ -75,6 +75,21 @@ img {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.water-chart {
+  width: 150%;
+  height: 150%;
+}
+
+.sleep-chart {
+  width: 200px;
+  height: 200px;
+}
+
+.activity-chart {
+  width: 100%;
+  height: 100%;
 }
 
 .recent-activity-title {
@@ -251,7 +266,7 @@ img {
     height: 80%;
   }
 
-  .water-img:hover, 
+  .water-img:hover,
   .sleep-img:hover,
   .activity-img:hover {
     cursor: pointer;
