--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,288 +1,294 @@
 *, *::after, *::before {
-    box-sizing: border-box;
-    position: relative;
+  box-sizing: border-box;
+  position: relative;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-}
-
-body, html {
-  background-image: linear-gradient(to right, rgba(38, 94, 157, 0.5), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.4));
-  background-repeat: no-repeat;
-  font-family: 'Quicksand', sans-serif;
-  height: 100%;
-}
-
-h2 {
-  font-size: 22px;
-}
-
-p {
-  font-size: 30px;
-  text-align: center;
-  font-weight: bold;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-}
-
-canvas {
-  width: 650px;
-  height: 450px
-}
-
-input {
-  text-align: center;
-}
-
-label {
-  font-size: 13px;
-}
-
-img {
   margin: 0;
   padding: 0;
 }
 
-button {
-  filter: drop-shadow(5px 5px 5px #686767);
+body, html {
+background-image: linear-gradient(to right, rgba(38, 94, 157, 0.5), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.4));
+background-repeat: no-repeat;
+font-family: 'Quicksand', sans-serif;
+height: 100%;
+}
+
+h2 {
+font-size: 22px;
+}
+
+p {
+font-size: 30px;
+text-align: center;
+font-weight: bold;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+canvas {
+width: 650px;
+height: 450px
+}
+
+input {
+text-align: center;
+}
+
+label {
+font-size: 13px;
+}
+
+img {
+margin: 0;
+padding: 0;
 }
 
 .top-section {
-  height: 30%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+height: 30%;
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
 }
 
 .welcome-box {
-  width: 20%;
-  height: 80%;
-  margin: 5px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+width: 20%;
+height: 80%;
+margin: 5px;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .welcome-user {
-  text-align: center;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-  font-size: 25px;
+text-align: center;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+font-size: 25px;
 }
 
 .user-image {
-  height: 50%;
+height: 50%;
 }
 
 .activity-box {
-  width: 40%;
-  height: 80%;
-  margin-bottom: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+width: 40%;
+height: 80%;
+margin-bottom: 5px;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .recent-activity-title {
-  text-align: center;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-  width: 90%;
-  height: 10%;
-  margin-bottom: 10px;
+text-align: center;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+width: 90%;
+height: 10%;
+margin-bottom: 10px;
 }
 
 .recent-activity-container {
-  border: 4px inset black;
-  background-color: rgba(255, 255, 255, 0.7);
-  background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.6));
-  width: 90%;
-  height: 90%;
-  margin-bottom: 5px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+border: 4px inset black;
+background-color: rgba(255, 255, 255, 0.7);
+background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.6));
+width: 90%;
+height: 90%;
+margin-bottom: 5px;
+display: flex;
+flex-direction: row;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .user-box {
-  border: 4px inset black;
-  background-color: rgba(97, 135, 183, 0.6);
-  width: 40%;
-  height: 80%;
-  margin: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+border: 4px inset black;
+background-color: rgba(97, 135, 183, 0.6);
+width: 40%;
+height: 80%;
+margin: 15px;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .user-dropdown {
-  background-color: rgba(188, 190, 214, 0.7);
-  border: 1px solid rgba(0, 0, 0, 0.7);
-  outline: 0px;
-  text-align: center;
-  font-weight: bold;
-  font-size:inherit;
-  font-family: inherit;
-  width: 90%;
-  height: 15%;
+background-color: rgba(188, 190, 214, 0.7);
+border: 1px solid rgba(0, 0, 0, 0.7);
+outline: 0px;
+text-align: center;
+font-weight: bold;
+font-size:inherit;
+font-family: inherit;
+width: 90%;
+height: 15%;
 }
 
 .user-info {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  font-size: 15px;
-  width: 90%;
-  height: 70%;
+display: flex;
+justify-content: center;
+text-align: center;
+font-size: 15px;
+width: 90%;
+height: 70%;
 }
 
 .bottom-section {
-  height: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+height: 70%;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
 }
 
 .icons-container {
-  height: 90%;
-  width: 10%;
-  margin-right: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+height: 90%;
+width: 10%;
+margin-right: 10px;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
 }
 
 .activity-img,
 .water-img,
 .sleep-img {
-  filter: drop-shadow(5px 5px 5px #171717);
-  height: 80px;
-  padding: 5px;
+filter: drop-shadow(5px 5px 5px #171717);
+height: 80px;
+padding: 0;
+margin: 0;
 }
 
 .bottom-container {
-  height: 90%;
-  width: 85%;
-  margin-left: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+height: 90%;
+width: 85%;
+margin-left: 10px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .category-container {
-  border: 4px inset black;
-  background-color: rgba(255, 255, 255, 0.7);
-  background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.5));
-  width: 98%;
-  height: 95%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+border: 4px inset black;
+background-color: rgba(255, 255, 255, 0.7);
+background-image: linear-gradient(to left, rgba(38, 94, 157, 0.6), rgba(171, 174, 203, 0.6), rgba(119, 85, 141, 0.5));
+width: 98%;
+height: 95%;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
 }
 
 .title-container {
-  margin: 4px;
-  width: 95%;
-  height: 10%;
+margin: 4px;
+width: 95%;
+height: 10%;
 }
 
 .stats-container {
-  width: 95%;
-  height: 85%;
-  margin-bottom: 25px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+width: 95%;
+height: 85%;
+margin-bottom: 25px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
 }
 
 .img-box {
-  width: 18%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+width: 18%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .category-image {
-  height: 50%;
+height: 50%;
 }
 
 .chart-box {
-  border: 2px inset rgba(64, 103, 147, 0.3);
-  background-color: rgba(171, 174, 203, 0.6);
-  width: 95%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+border: 2px inset rgba(64, 103, 147, 0.3);
+background-color: rgba(171, 174, 203, 0.6);
+width: 95%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .category-chart {
-  display: flex;
-  flex-direction: center;
-  align-items: center;
+display: flex;
+flex-direction: center;
+align-items: center;
 }
 
 .average-box {
-  width: 25%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+width: 25%;
+height: 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
 }
 
 .daily-goal,
 .average-goal {
-  border: 2px inset rgba(64, 103, 147, 0.3);
-  background-color: rgba(171, 174, 203, 0.6);
-  width: 90%;
-  height: 48%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
+border: 2px inset rgba(64, 103, 147, 0.3);
+background-color: rgba(171, 174, 203, 0.6);
+width: 90%;
+height: 48%;
+text-align: center;
+display: flex;
+flex-direction: column;
+justify-content: start;
+align-items: center;
 }
 
 .steps-box,
 .minutes-active,
 .miles-walked,
 .stairs {
-    border: 1px inset rgba(0, 0, 0, 0.3);
-    background-color: rgba(171, 174, 203, 0.6);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    padding-top: 5px;
-    width: 23%;
-    height: 80%;
-  }
+  border: 1px inset rgba(0, 0, 0, 0.3);
+  background-color: rgba(171, 174, 203, 0.6);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  padding-top: 5px;
+  width: 23%;
+  height: 80%;
+}
 
-  .water-img:hover,
-  .sleep-img:hover,
-  .activity-img:hover {
-    cursor: pointer;
-    filter: invert(100%);
-  }
+.water-img:hover,
+.sleep-img:hover,
+.activity-img:hover {
+  cursor: pointer;
+  filter: invert(100%);
+}
 
-  .data-input {
-    font-size: 15px;
-  }
+.data-input {
+  font-size: 15px;
+}
 
-  /* .history-display {
-    font-size: 14px;
-  } */
+.history-display {
+  font-size: 12px;
+}
 
-  .hidden {
-    display: none;
-  }
+.submit-button {
+  filter: drop-shadow(5px 5px 5px #686767);
+}
+
+.icon-text-below {
+  bottom: 15px;
+}
+
+.hidden {
+  display: none;
+}
 
 @import '~js-datepicker/dist/datepicker.min.css';
